# TheWatsonCrew

./: .env.example  .gitignore  LICENSE  Makefile  README.md  abc.txt  activate.sh  package.json  pyproject.toml
.husky/: pre-commit  pre-push
Intelligence/: main.py
Intelligence/agents/: agent_runner.py  agent_tree.py
Intelligence/configs/: retrieval.yaml
Intelligence/configs/tools/: teacher.yaml
Intelligence/dag_planner/: DAG.py  agent.py  node.py  templates_prompts.py
Intelligence/dag_planner/planning/: FINANCIAL_AGENT_planning.json  MEDICAL_AGENT_planning.json  ROOT_planning.json
Intelligence/data_sources/: unsuccessful_trials_blood_pressure.json
Intelligence/data_sources/web_links/: diabetes.txt  stock_market.txt
Intelligence/node_processing/: ingestion.py  web_scrapper.py
Intelligence/retrieval_response/: retriever.py
Intelligence/tools/: create_leaf_kb.py  leaf_nodes.py
Intelligence/tools/teacher/: clustering_results.csv  links.txt  setup.py  video_frames.json
Intelligence/utils/: llm_utils.py  misc_utils.py  templates.py  watson_llm.py
api/: requirements.txt
api/api/: settings.py  urls.py
api/thewatsoncrew/: apps.py  urls.py  utils.py  views.py
api/thewatsoncrew/Intelligence/agents/: agent_runner.py  agent_tree.py  tutorial.ipynb
api/thewatsoncrew/Intelligence/dag_planner/: DAG.py  agent.py  node.py  templates_prompts.py
api/thewatsoncrew/Intelligence/data_sources/: unsuccessful_trials_financial_db.json
api/thewatsoncrew/Intelligence/node_processing/: custom_extractors.py  ingestion.py  store.py  web_scrapper.py
api/thewatsoncrew/Intelligence/retrieval_response/: retriever.py  templates.py
api/thewatsoncrew/model/: chat.py  dummy_data.py  links_knowledge.py  test_evaluate_ai.py
scripts/: setup.sh  setupweb.sh
vector_stores/descriptive_prefixes/: chroma.sqlite3
web/: .env.example  .lintstagedrc.js  .prettierignore  .prettierrc  package.json
web/src/app/: DummyData.tsx  error.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
web/src/contexts/: AppContext.tsx  NotificationContext.tsx
web/src/hooks/: useGetLLMResponse.tsx  useNotification.tsx  usePostLLMResponse.tsx
web/src/styles/: blog_ai.module.css  chat_ai.module.css  globals.css  page.module.css
(+82 files in other folders)
