[tool.poetry]
name = "rag-agents"
version = "0.1.0"
description = "This project aims to stay updated with new things coming in GenAI"
authors = ["Sar2580P"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
llama-index = "^0.10.34"
llama-index-extractors-entity = "^0.1.2"
pinecone = "^4.0.0"
lxml = "^5.2.1"
python-dotenv = "^1.0.1"
llama-index-llms-gemini = "^0.1.7"
llama-index-embeddings-gemini = "^0.1.6"
llama-index-vector-stores-chroma = "^0.1.8"
spacy = "^3.7.4"
yt-dlp = "^2024.5.26"
moviepy = "^1.0.3"
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"
langchain = "^0.2.5"
icecream = "^2.1.3"
langchain-google-genai = "^1.0.6"
langchain-community = "^0.2.5"
matplotlib = "^3.9.0"
llama-index-retrievers-bm25 = "^0.1.4"
asgiref = "3.8.1"
django = "5.0.6"
django-cors-headers = "4.4.0"
djangorestframework = "3.15.2"
sqlparse = "0.5.0"
tzdata = "2024.1"
pytube = "^15.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
